perus/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mktest  # Tämä ylikirjoitetaan overlay-vaiheessa
