perus/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-ui
spec:
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      # 1. Lisää salaisuus Google Artifact Registryä varten
      imagePullSecrets:
        - name: google-registry-key
      
      # OpenShiftissä voit usein käyttää 'default' SA:ta, jos et tarvitse GCP-oikeuksia
      serviceAccountName: my-app-ksa 

      containers:
      - name: ui-container
        image: ui-image
        ports:
          - containerPort: 8080 # MUUTETTU: OpenShift Nginx-standardi
        volumeMounts:
        - name: config-volume
          mountPath: /etc/nginx/nginx.conf  # MUUTETTU TÄMÄ
          subPath: nginx.conf              # LISÄTTY TÄMÄ
        resources:
          requests:
            cpu: "10m"
            memory: "64Mi" # Hieman nostettu varmuuden vuoksi
          limits:
            cpu: "50m"
            memory: "128Mi"
        
        # 2. OpenShift Security Context (Sama kuin API:lla)
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault

      volumes:
      - name: config-volume
        configMap:
          # 3. TÄRKEÄÄ: Nimen on oltava sama kuin perus/kustomization.yaml:n generatorissa
          name: nginx-config
