perus/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  labels:
    app: api
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 8080       # Portti, jota muut podit (esim. UI) käyttävät klusterin sisällä
      targetPort: 8090 # Podin (Spring Boot) todellinen portti
  type: ClusterIP      # OpenShiftissä ClusterIP on paras ja turvallisin oletus
