perus/ingress.yaml
# ../../perus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    kubernetes.io/ingress.class: "gce" # Laita tämä takaisin - GKE tarvitsee tätä usein vielä
spec:
  #ingressClassName: gce  # Korvaa annotaation, mikä vanhentunut
  rules:
  - http:
      paths:
      - path: /java-api/
        pathType: Prefix
        backend:
          service:
            name: api-service
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: react-ui-service
            port:
              number: 80
